Fix: notice logo alignment issue (#840)
* Fix: notice logo alignment issue

* remove min-width css

--- a/inc/assets/css/astra-admin.css
+++ b/inc/assets/css/astra-admin.css
@@ -76,22 +76,15 @@
 }
 
 .notice-image img {
-    width: 6%;
-    vertical-align: top;
+    max-width: 100px;
 }
 
 .notice-content {
-    display: inline-block;
     padding-top: 7px;
 }
 
 .notice-content .notice-heading {
     padding-bottom: 5px;
-}
-
-.notice-image {
-    width: 100%;
-    display: inline;
 }
 
 .notice-content {
@@ -101,4 +94,7 @@
 .notice-container {
     padding-top: 20px;
     padding-bottom: 15px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
 }
